ugly z-index bugfix

--- a/src/index.css
+++ b/src/index.css
@@ -300,8 +300,8 @@ a.ui.fluid.card.recommendation-card:last-child {
   color: black;
 }
 
-.ui.container.analytics-container .bookmark-growth-analytics svg+div {
-  z-index: 999 !important;
+.ui.container.analytics-container .bookmark-growth-analytics {
+  z-index: 10;
 }
 
 .analytics-container .recommendation-card-header i {
@@ -320,6 +320,10 @@ a.ui.fluid.card.recommendation-card:last-child {
   display: inline-block;
 }
 
+.ui.card.popular-bookmark-analytics {
+  z-index: 8;
+}
+
 .ui.card.popular-bookmark-analytics > .meta {
   position: absolute; 
   right: 0; 
@@ -328,5 +332,5 @@ a.ui.fluid.card.recommendation-card:last-child {
   padding: 1.5em 1.5em 0 0; 
   color: #fff;
   background-color: rgb(51, 56, 66, .6);
-  z-index: 99;
+  z-index: 5;
 }
